--- a/demo.html
+++ b/demo.html
@@ -527,7 +527,7 @@
     <div id="header1">
         <header class="header">
             <ul>
-                <li><a href="#">Fenil</a></li>
+                <li><a href="#">CATALOGUE</a></li>
                 <li><a href="#">FASHION</a></li>
                 <li><a href="#">FAVOURITE</a></li>
                 <li><a href="#">LIFESTYLE</a></li>
@@ -536,7 +536,7 @@
                 <img src="/img/Group 7061.png" alt="">
             </div>
             <div class="button">
-                <button>Fenil UP</button>
+                <button>SIGN UP</button>
             </div>
         </header>
     </div>
